--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://<YOUR-GITHUB-USERNAME>.github.io/quartz/"
+baseURL = "https://netori.github.io/quartz/"
 languageCode = "en-us"
 relativeURLs = false
 disablePathToLower = true
