--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,4 +1,4 @@
-name: Jacky Zhao
+name: netori
 enableToc: true
 openToc: false
 enableLinkPreview: true
@@ -12,18 +12,17 @@ enableContextualBacklinks: true
 enableRecentNotes: false
 enableGitHubEdit: true
 enableMermaid: true
-GitHubLink: https://github.com/jackyzha0/quartz/tree/hugo/content
+GitHubLink: https://github.com/netori/quartz/tree/hugo/content
 search:
   enableSemanticSearch: false
   operandApiKey: "REPLACE-WITH-YOUR-OPERAND-API-KEY"
   operandIndexId: "REPLACE-WITH-YOUR-OPERAND-INDEX-ID"
 description:
-  Host your second brain and digital garden for free. Quartz features extremely fast full-text search,
-  Wikilink support, backlinks, local graph, tags, and link previews.
+  Undecided...
 page_title:
-  "🪴 Quartz 3.3"
+  "🖳 Technical Information"
 links:
-  - link_name: Twitter
-    link: https://twitter.com/_jzhao
+  - link_name: FearLess Cheat Engine
+    link: https://fearlessrevolution.com/memberlist.php?mode=viewprofile&u=39952
   - link_name: GitHub
-    link: https://github.com/jackyzha0
+    link: https://github.com/netori
