--- a/data/config.yaml
+++ b/data/config.yaml
@@ -20,7 +20,7 @@ search:
 description:
   Undecided...
 page_title:
-  "🖳 Technical Information"
+  "🖳 Technical Information Hub"
 links:
   - link_name: FearLess Cheat Engine
     link: https://fearlessrevolution.com/memberlist.php?mode=viewprofile&u=39952
