--- a/data/config.yaml
+++ b/data/config.yaml
@@ -22,7 +22,7 @@ description:
 page_title:
   "🖳 Technical Information Hub"
 links:
-  - link_name: FearLess Cheat Engine
+  - link_name: Fearless
     link: https://fearlessrevolution.com/memberlist.php?mode=viewprofile&u=39952
   - link_name: GitHub
     link: https://github.com/netori
