--- a/data/config.yaml
+++ b/data/config.yaml
@@ -20,7 +20,7 @@ search:
 description:
   Undecided...
 page_title:
-  "ねとりの情報"
+  "🖳　ねとりの情報"
 links:
   - link_name: Fearless
     link: https://fearlessrevolution.com/memberlist.php?mode=viewprofile&u=39952
