--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://netori.io/"
+baseURL = "https://netori.github.io/"
 languageCode = "en-us"
 relativeURLs = false
 disablePathToLower = true
